# AISradar_pi

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  bld.bat  make-new-plugin.sh
.circleci/: config.yml
OLD/: CMakeLists.txt.bak
OLD/msvc/: win_deps.bat
bitmaps/: aisicon.cpp  aisicon.h  aisradar.cpp  aisradar.h  aisview.cpp  aisview.h  png2wx.py  target.cpp  target.h  target_alarm.cpp  target_alarm.h  target_lost.cpp  target_lost.h  target_unk.cpp  target_unk.h  yacht.cpp  yacht.h  yacht_alarm.cpp  yacht_alarm.h  yacht_lost.cpp  yacht_lost.h  yacht_unk.cpp  yacht_unk.h
buildosx/InstallOSX/: aisradar_pi.pkgproj.in
ci/: circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos-universal.sh  circleci-build-msvc.bat  circleci-build-ubuntu-docker.sh  control
cmake/: PluginConfigure.cmake  PluginCurl.cmake  PluginInstall.cmake  PluginPackage.cmake  PluginSetup.cmake  version.h.in
cmake/in-files/: cloudsmith-upload.sh.in
make/: radar_pi.sln  radar_pi.vcproj
manual/: antora.yml  site.yml
manual/ais_radar_display/: antora.yml  site.yml
manual/ais_radar_display/modules/ROOT/pages/: ais_radar_display.adoc
manual/docs/: 404.html  index.html  sitemap.xml
manual/docs/aisradar/0.1/: index.html
manual/modules/ROOT/pages/: index.adoc
msvc/: win_deps.bat
po/: POTFILES.in  aisradar_pi.pot  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_EM.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  (+20 more)
src/: Canvas.cpp  Canvas.h  Target.cpp  Target.h  aisradar.cpp  aisradar.h  aisradar_pi.cpp  aisradar_pi.h  aisview.cpp  aisview.h  icons.cpp  icons.h  my_icons.cpp  my_icons.h  ocpn_plugin.h  radar.cpp  radar.h  radar_pi.cpp  radar_pi.h  radar_view.cpp  radar_view.h  version.h
